--- a/food-tracker-ml/src/circular-pie-chart-component/CircularPieChart.css
+++ b/food-tracker-ml/src/circular-pie-chart-component/CircularPieChart.css
@@ -5,8 +5,9 @@
     position: absolute;
     left: 18%;
     top: 13%;*/
-   width: 100%;
-   height: 100%;
+    
+    min-width: 12em;
+    min-height: 12em;
   }
    .label {
 
@@ -16,16 +17,28 @@
     width: 4em;
     height: 4em;
     border-radius: 50%;
-    
+    position: relative;
   }
   
   
    .dial-background {
-    border-radius: 50%;
+    
     background: var(--color-foreground);
+    
+  }
+
+  .dial-overlay{
+    border-radius: 50%;
     height: 8em;
     width: 8em;
     position: absolute;
+    overflow: hidden;
   }
   
+  .flex-center{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-left: 4em;
+  }
  
