--- a/food-tracker-ml/src/food-dairy-container-component/FoodDiaryContainer.css
+++ b/food-tracker-ml/src/food-dairy-container-component/FoodDiaryContainer.css
@@ -1,21 +1,23 @@
 .food-diary{
     display: flex;
-    flex-direction: column-reverse;
+    flex-direction: column;
     width: 100%;
     height: 100vh;
+    padding: 32px;
+    justify-content: flex-end;
 }
 
 .bottom-row{
-    padding: 32px;
-    padding-top: 16px;
     width: 100%;
 }
 
 .food-diary-panel{
-    padding: 32px;
     padding-bottom: 0;
     width: 100%;
-    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+    height: 100%;
 }
 
 @media only screen and (max-width: 700px) {
