--- a/food-tracker-ml/src/index.css
+++ b/food-tracker-ml/src/index.css
@@ -281,3 +281,13 @@ input[type=number]{
   color: var(--color-text-primary);
     background-color: var(--color-foreground-transparent);
 }
+
+input:disabled {
+  cursor: not-allowed;
+  color: var(--color-text-secondary);
+}
+
+button:disabled {
+  cursor: not-allowed;
+  color: var(--color-text-secondary);
+}
