--- a/food-tracker-ml/src/prompt-component/Prompt.css
+++ b/food-tracker-ml/src/prompt-component/Prompt.css
@@ -25,14 +25,17 @@
 }
 
 .prompt-image-container{
-    min-width: 50%;
-    max-width: 100%;
     overflow: hidden;
-
+    width: 100%;
+    height: 100vh;
     padding: 0;
-    border-radius: 8px;
-    margin: 32px;
-
+    border-radius: 0;
+    margin: 0;
+    background-color: var(--color-foreground);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 32px;
 }
 
 .prompt-image{
@@ -45,6 +48,11 @@
 .prompt-text-container{
     padding: 32px;
     overflow-y: auto;
+    width: 100%;
+    height: 100vh;
+    max-height: 100vh;
+    background-color: var(--color-background);
+
 }
 
 
